# japanese-puzzle-collection

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: BaseGameScreen.cpp  BaseGameScreen.h  IScreen.h
src/games/Nonogram/: NonogramLogic.cpp  NonogramLogic.h  NonogramMenu.cpp  NonogramMenu.h  NonogramScreen.cpp  NonogramScreen.h  NonogramSolver.cpp  NonogramSolver.h
src/games/Sudoku/: SudokuLogic.cpp  SudokuLogic.h  SudokuMenu.cpp  SudokuMenu.h  SudokuScreen.cpp  SudokuScreen.h  SudokuSolver.cpp  SudokuSolver.h
src/screens/: BaseMenuScreen.cpp  BaseMenuScreen.h  MainMenu.cpp  MainMenu.h
